--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -26,6 +26,8 @@ sqlalchemy = "==1.4.19"
 werkzeug = "==2.0.1"
 wtforms = "==2.3.3"
 email-validator = "*"
+boto3 = "*"
+botocore = "*"
 
 [dev-packages]
 
