--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,8 @@
 
 -i https://pypi.org/simple
 alembic==1.6.5
+boto3==1.26.22
+botocore==1.29.22
 click==7.1.2
 flask-cors==3.0.8
 flask-login==0.5.0
