--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -28,6 +28,10 @@ wtforms = "==2.3.3"
 email-validator = "==1.3.0"
 boto3 = "==1.26.22"
 botocore = "==1.29.22"
+flask-socketio = "==5.2.0"
+eventlet = "==0.33.1"
+python-engineio = "==4.3.2"
+python-socketio = "==5.6.0"
 
 [dev-packages]
 
