--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,9 +10,12 @@ alembic==1.6.5
 boto3==1.26.22
 botocore==1.29.22
 click==7.1.2
+email-validator==1.3.0
+eventlet==0.33.1
 flask-cors==3.0.8
 flask-login==0.5.0
 flask-migrate==3.0.1
+flask-socketIO==5.2.0
 flask-sqlalchemy==2.5.1
 flask-wtf==0.15.1
 flask==2.0.1
@@ -25,8 +28,9 @@ markupsafe==2.0.1
 python-dateutil==2.8.1
 python-dotenv==0.14.0
 python-editor==1.0.4
+python-engineio==4.3.2
+python-socketio==5.6.0
 six==1.15.0
 sqlalchemy==1.4.19
 werkzeug==2.0.1
 wtforms==2.3.3
-email-validator==1.3.0
