--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ alembic==1.6.5
 boto3==1.26.22
 botocore==1.29.22
 click==7.1.2
+dnspytho==1.16.0
 email-validator==1.3.0
 eventlet==0.30.2
 flask-cors==3.0.8
