--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -32,6 +32,7 @@ flask-socketio = "==5.2.0"
 eventlet = "==0.30.2"
 python-engineio = "==4.3.2"
 python-socketio = "==5.6.0"
+dnspython = "==1.16.0"
 
 [dev-packages]
 
